--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>React App</title>
     <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	0fccab5b5665c794fedc2e2a192bd817"></script> -->
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script async="async" src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0fccab5b5665c794fedc2e2a192bd817&libraries=services"></script>
   </head>
   <body>
